--- a/README.Rmd
+++ b/README.Rmd
@@ -20,33 +20,10 @@ knitr::opts_chunk$set(
   out.width = "100%",
   fig.path  = "man/figures/README-"
 )
-options(scipen = 999)
-#library(timetk)
-#library(ggplot2)
-#library(plotly)
-#library(lubridate)
 ```
 
 ```{r rds_files, include = FALSE}
-mdcr_enroll_ab_1 <- readr::read_rds(here::here("data", "mdcr_enroll_ab_1.rds"))
-mdcr_enroll_ab_2 <- readr::read_rds(here::here("data", "mdcr_enroll_ab_2.rds"))
-mdcr_enroll_ab_3 <- readr::read_rds(here::here("data", "mdcr_enroll_ab_3.rds"))
-mdcr_enroll_ab_4 <- readr::read_rds(here::here("data", "mdcr_enroll_ab_4.rds"))
-mdcr_enroll_ab_5 <- readr::read_rds(here::here("data", "mdcr_enroll_ab_5.rds"))
-mdcr_enroll_ab_6 <- readr::read_rds(here::here("data", "mdcr_enroll_ab_6.rds"))
-mdcr_enroll_ab_7 <- readr::read_rds(here::here("data", "mdcr_enroll_ab_7.rds"))
-mdcr_enroll_ab_8 <- readr::read_rds(here::here("data", "mdcr_enroll_ab_8.rds"))
-
-# mdcr_enroll_avgs <- readr::read_rds(here::here("data", "mdcr_enroll_avgs.rds"))
-
-mdcr_enroll_ab_33 <- readr::read_rds(here::here("data", "mdcr_enroll_ab_33.rds"))
-mdcr_enroll_ab_34 <- readr::read_rds(here::here("data", "mdcr_enroll_ab_34.rds"))
-mdcr_enroll_ab_35 <- readr::read_rds(here::here("data", "mdcr_enroll_ab_35.rds"))
-mdcr_enroll_ab_36 <- readr::read_rds(here::here("data", "mdcr_enroll_ab_36.rds"))
-mdcr_enroll_ab_37 <- readr::read_rds(here::here("data", "mdcr_enroll_ab_37.rds"))
-
-# mdcr_enroll_ab_38 <- readr::read_rds(here::here("data", "mdcr_enroll_ab_38.rds"))
-# mdcr_enroll_ab_39 <- readr::read_rds(here::here("data", "mdcr_enroll_ab_39.rds"))
+source(here::here("R", "utils.R"))
 ```
 
 # CMS Program Statistics
@@ -169,12 +146,7 @@ Residence, 2013-2021
 mdcr_enroll_ab_7
 ```
 
-Part A and/or Part B Enrollees, by Type of Entitlement and Area of
-Residence, 2013-2021
 
-```{r mdcr_enroll_ab_8}
-mdcr_enroll_ab_8
-```
 
 ## Medicare Deaths
 
