--- a/analysis.qmd
+++ b/analysis.qmd
@@ -1,26 +1,475 @@
 ---
 title: "CMS Program Statistics"
 author: "Andrew Bruce"
-format: html
+format: 
+  html:
+    theme: zephyr
+    toc: true
+    number-sections: false
+date: last-modified
+code-fold: false
+code-overflow: scroll
 ---
 
-## Quarto
+The CMS Program Statistics (CPS) includes high-level summary reports focused on Medicare populations, use, and payment, as well as counts for Medicare-certified institutional and non-institutional providers.
 
-Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
+## Medicare Enrollment
 
-## Running Code
+The Medicare Enrollment reports contain trend, demographic, and state tables showing total Medicare enrollment, Original Medicare enrollment, Medicare Advantage and Other Health Plan enrollment, newly-enrolled beneficiaries, deaths, Medicare-Medicaid Enrollment, and Medicare Part D enrollment.
 
-When you click the **Render** button a document will be generated that includes both content and the output of embedded code. You can embed code like this:
+Information on all Medicare enrollees by geography, type of coverage, type of entitlement, and demographic characteristics.
 
-```{r}
-1 + 1
-```
-
-You can add options to executable code like this 
-
-```{r}
+```{r setup}
 #| echo: false
-2 * 2
+#| eval: true
+source(here::here("R", "utils.R"))
 ```
 
-The `echo: false` option disables the printing of code (only output is displayed).
+```{r mdcr_enroll_ab_1}
+mdcr_enroll_ab_1 |> 
+  dplyr::select(Year = year, 
+                Total = total, 
+                Original = original, 
+                Advantage = ma_other) |> 
+  gt::gt(rowname_col = "Year") |> 
+  gt::sub_missing() |> 
+  gt::fmt_number(columns = c("Total", "Original", "Advantage"),
+                 suffixing = TRUE,
+                 decimals = 2) |>
+  gt::opt_stylize(style = 1)
+```
+
+<br>
+
+```{r mdcr_enroll_ab_1_2}
+mdcr_enroll_ab_1 |> 
+  dplyr::select(Year = year, 
+                Total = total_chg, 
+                Original = original_chg, 
+                Advantage = ma_other_chg) |> 
+  gt::gt(rowname_col = "Year") |> 
+  gt::sub_missing() |> 
+  gt::fmt_number(columns = c("Total", "Original", "Advantage"),
+                 force_sign = TRUE,
+                 decimals = 2,
+                 suffixing = TRUE) |>
+  gt::opt_stylize(style = 1)
+```
+
+
+<br>
+
+```{r mdcr_enroll_ab_1_3}
+mdcr_enroll_ab_1 |> 
+  dplyr::select(Year = year, 
+                Total = total_pct_chg, 
+                Original = original_pct_chg, 
+                Advantage = ma_other_pct_chg) |> 
+  gt::gt(rowname_col = "Year") |> 
+  gt::sub_missing() |> 
+  gt::fmt_percent(columns = c("Total", "Original", "Advantage"),
+                  force_sign = TRUE) |> 
+  gt::opt_stylize(style = 1)
+```
+
+::: {.callout-note appearance="simple"}
+
+## Original Medicare Enrollees
+
+Medicare beneficiaries enrolled in the traditional health care system (or Fee-for-Service).
+
+:::
+
+
+::: {.callout-note appearance="simple"}
+
+## Medicare Advantage and Other Health Plan Enrollees
+
+Medicare beneficiaries enrolled in health plans that are offered by private companies approved by Medicare to provide health care coverage offered at a uniform premium and uniform level of cost-sharing to all Medicare beneficiaries residing in the service area (or segment of the service area). Each type of plan has special rules and exceptions.
+
+:::
+
+
+
+```{r}
+#| label: fig-origmapct
+#| fig-cap: "Breakdown of percentage of Medicare types from 2008 to 2021"
+#| warning: false
+#| code-fold: true
+
+mdcr_enroll_ab_1 |> 
+  dplyr::select(Year = year, 
+                #total, 
+                Original = original, 
+                "Medicare Advantage" = ma_other) |> 
+  tidyr::pivot_longer(!Year, 
+                      names_to = "Type", 
+                      values_to = "Enrollees") |> 
+  ggplot2::ggplot(ggplot2::aes(Year, 
+                               Enrollees, 
+                               group = Type, 
+                               fill = Type)) +
+  ggchicklet::geom_chicklet(width = 0.75) +
+  ggplot2::scale_fill_manual(
+    name = NULL,
+    values = c(
+      "Medicare Advantage" = "#ae4544",
+      "Economy" = "#d8cb98",
+      "Climate Change" = "#a4ad6f",
+      "Original" = "#cc7c3a",
+      "Healthcare" = "#436f82",
+      "Foreign Policy" = "#7c5981",
+      "Other" = "#cccccc"
+    )
+    #breaks = setdiff(unique(debates2019$topic), "Other")
+  ) +
+  ggplot2::guides(
+    fill = ggplot2::guide_legend(nrow = 1)
+  ) +
+  ggplot2::coord_flip() +
+  ggplot2::labs(
+    x = NULL, 
+    y = NULL, 
+    fill = NULL
+  ) +
+  hrbrthemes::theme_ipsum_rc(grid="X") +
+  ggplot2::theme(axis.text.x = ggplot2::element_text(
+    color = "gray60", 
+    size = 10)) +
+  ggplot2::theme(legend.position = "top")
+```
+
+<br>
+
+```{r}
+#| warning: false
+#| code-fold: true
+mdcr_enroll_ab_1 |> 
+  dplyr::select(year, 
+                original_pct, 
+                ma_other_pct) |> 
+  tidyr::pivot_longer(!year, 
+                      names_to = "measure", 
+                      values_to = "data") |> 
+  dplyr::group_by(year) |> 
+  dplyr::summarise(list_data = list(data)) |> 
+  gt::gt() |> 
+  gtExtras::gt_plt_bar_stack(column = list_data,
+                             labels = c("Original ", 
+                                        " Advantage"),
+                             palette = c("#ff4343", "#0a1c2b"),
+                             fmt_fn = scales::label_percent(accuracy = 0.1)) |> 
+  gtExtras::gt_theme_538()
+```
+
+<br>
+
+```{r}
+#| warning: false
+#| code-fold: true
+mdcr_enroll_ab_1 |> 
+  dplyr::select(year, 
+                total_pct_chg,
+                original_pct_chg, 
+                ma_other_pct_chg) |> 
+  provider:::gt_prov(divider = c("year", 
+                                 "ma_other_pct_chg"),
+                     pctchg = c("total_pct_chg", 
+                                "original_pct_chg", 
+                                "ma_other_pct_chg")) |>
+  gt::tab_spanner(label = "YEAR-OVER-YEAR CHANGE (%)",
+                  columns = c(total_pct_chg,
+                              original_pct_chg, 
+                              ma_other_pct_chg)) |> 
+  gt::cols_label(total_pct_chg = "Total",
+                 original_pct_chg = "Original", 
+                 ma_other_pct_chg = "Advantage")
+```
+
+<br>
+
+```{r}
+mdcr_enroll_ab_1 |> 
+  dplyr::select(year,
+                total,
+                original,
+                ma_other,
+                total_chg,
+                original_chg, 
+                ma_other_chg) |> 
+  dplyr::summarise(n = dplyr::n(),
+                   avg_total = mean(total),
+                   avg_original = mean(original),
+                   avg_ma_other = mean(ma_other),
+                   tot_chg_sum = sum(total_chg, na.rm = TRUE),
+                   avg_tot_chg = tot_chg_sum / n,
+                   orig_chg_sum = sum(original_chg, na.rm = TRUE),
+                   avg_orig_chg = orig_chg_sum / n,
+                   ma_chg_sum = sum(ma_other_chg, na.rm = TRUE),
+                   avg_ma_chg = ma_chg_sum / n) |> 
+  dplyr::select(!c(n, dplyr::contains("sum"))) |> 
+  pct(avg_original, avg_total) |> 
+  pct(avg_ma_other, avg_total) |> 
+  dplyr::glimpse()
+```
+
+<br>
+
+## Enrollment and Population by Area of Residence, 2013-2021
+
+```{r mdcr_enroll_ab_2}
+mdcr_enroll_ab_2 |> 
+  dplyr::glimpse()
+```
+
+
+
+::: {.callout-note appearance="simple"}
+
+## Metropolitan Statistical Area
+
+A Core Based Statistical Area associated with at least one urbanized area that has a population of at least 50,000. The Metropolitan Statistical Area comprises the central county or counties containing the core, plus adjacent outlying counties having a high degree of social and economic integration with the central county or counties as measured through commuting.
+
+:::
+
+
+::: {.callout-note appearance="simple"}
+
+## Micropolitan Statistical Area
+
+A Core Statistical Area associated with at least one urban cluster that has a population of at least 10,000, but less than 50,000. The Micropolitan Statistical Area comprises the central county or counties containing the core, plus adjacent outlying counties having a high degree of social and economic integration with the central county or counties as measured through commuting.
+
+:::
+
+
+::: {.callout-note appearance="simple"}
+
+## Non-Core-Based Statistical Area
+
+All remaining counties, often labeled “noncore” counties because they are not part of “core-based” metropolitan or micropolitan areas.
+
+:::
+
+
+
+```{r}
+mdcr_enroll_ab_2 |> 
+  dplyr::select(year, 
+                area_of_residence, 
+                total_pct) |> 
+  tidyr::pivot_wider(names_from = "year", 
+                     values_from = "total_pct") |> 
+  gt::gt(rowname_col = "area_of_residence") |> 
+  gt::cols_align(align = "right", 
+                 columns = area_of_residence) |> 
+  gt::cols_align_decimal() |> 
+  gt::opt_table_font(
+    font = c(
+      gt::google_font(name = "Karla"),
+      gt::default_fonts())) |>
+  gt::tab_style(
+    style = gt::cell_text(
+      font = c(
+        gt::google_font(name = "IBM Plex Mono"),
+        gt::default_fonts())),
+    locations = gt::cells_body(columns = 2:10)) |> 
+  # gt::tab_style(style = gt::cell_text(weight = "bold"),
+  #               locations = gt::cells_stub()) |>
+  gt::fmt_percent(rows = 1,
+                  decimals = 1,
+                  drop_trailing_zeros = TRUE,
+                  drop_trailing_dec_mark = TRUE) |> 
+  gt::fmt_number(rows = 2:52,
+                 decimals = 1,
+                 scale_by = 100,
+                 drop_trailing_zeros = TRUE) |> 
+  gt::data_color(direction = "row",
+                 method = "numeric",
+                 palette = "PuOr",
+                 #alpha = 0.4,
+                 reverse = TRUE
+                 ) |> 
+  gt::opt_vertical_padding(scale = 0.65) |>
+  gt::opt_horizontal_padding(scale = 1.3) |>
+  gt::tab_options(
+    table_body.hlines.style = "none",
+    column_labels.border.top.color = "black",
+    column_labels.border.bottom.color = "black",
+    table_body.border.bottom.color = "black")
+```
+
+<br>
+
+
+Part A and/or Part B Total, Aged, and Disabled Enrollees, 2008-2021
+
+::: {.callout-note appearance="simple"}
+
+## Medicare Part A
+
+An insurance program providing basic protection against the costs of hospital and related post-hospital services for individuals who: are age 65 or over and are eligible for retirement benefits under the Social Security or the RRB system; are under age 65 who have been entitled for at least 24 months to disability benefits under the Social Security or RRB system; are medically determined to have ESRD and are covered by the Social Security or RRB system; beginning in July 2001, are persons with Amyotrophic Lateral Sclerosis (Lou Gehrig’s Disease) who are allowed to waive the 24-month waiting period; or beginning March 30, 2010, are in the vicinity of Libby, Montana who are diagnosed with an asbestos-related condition. Part A helps cover inpatient hospital care, skilled nursing facility (SNF) care, hospice care, and some home health care.
+
+:::
+
+
+::: {.callout-note appearance="simple"}
+
+## Medicare Part B
+
+A voluntary insurance program that provides insurance benefits for physicians’ services, outpatient care, ambulatory services, medical supplies and services, durable medical equipment, some home health care services, and preventive services to aged and disabled individuals who elect to enroll under the program in accordance with the provisions of Title XVIII of the Social Security Act. The SMI program is financed by enrollee premium payments and contributions from funds appropriated by the Federal Government. A separate account in the SMI trust fund now also accounts for the Part D drug benefit.
+
+:::
+
+```{r mdcr_enroll_ab_3}
+mdcr_enroll_ab_3
+```
+
+<br>
+
+Part A and/or Part B Enrollees by Age Group, 2008-2021
+
+```{r mdcr_enroll_ab_4}
+mdcr_enroll_ab_4 |> 
+  dplyr::select(year, 
+                dplyr::contains("tot_"))
+```
+
+<br>
+
+```{r mdcr_enroll_ab_4_2}
+mdcr_enroll_ab_4 |> 
+  dplyr::select(year, 
+                dplyr::contains("pct")) |> 
+  tidyr::pivot_longer(!year, 
+                      names_to = "group", 
+                      values_to = "percentage")
+```
+
+<br>
+
+Part A and/or Part B Enrollees by Demographics, 2013-2021
+
+```{r mdcr_enroll_ab_5}
+mdcr_enroll_ab_5
+```
+
+<br>
+
+Part A and/or Part B Enrollees by Type of Entitlement and Demographics, 2013-2021
+
+::: {.callout-note appearance="simple"}
+
+## Aged
+
+One of the categories used for classifying Medicare enrollees and Medicaid eligibles. Under Medicare, persons age 65 or over are included in this category if they are: entitled to monthly SSA benefits or payments from the RRB, uninsured for SSA or RRB benefits but transitionally insured for Medicare, or not included in the previously mentioned groups, but based on meeting certain criteria, elect to purchase HI and/or SMI coverage by paying the appropriate monthly premium. Persons age 65 or over identified as having ESRD are included. Under Medicaid, persons age 65 or over are included if, in addition to initially being age 65 or over met certain means (income and resources) criteria or incur medical expenses for health care that when deducted from income qualifies the individual for Medicaid.
+
+:::
+
+
+::: {.callout-note appearance="simple"}
+
+## Disabled
+
+One of the categories used for classifying Medicare enrollees and Medicaid eligibles. Disabled persons under age 65 receiving Social Security or RRB disability insurance benefits for 24 months are eligible for Medicare coverage. Persons under age 65 who are diagnosed with ESRD are eligible to receive Medicare coverage without the Social Security disability insurance 24 month requirement. In this online report, ESRD beneficiaries are included with the disabled unless otherwise noted. Under Medicaid, the disabled category refers to low-income individuals of any age who are eligible as persons meeting SSA’s programmatic definition of disability. This includes individuals receiving SSI as well as those whose incomes are too high for SSI, but qualify under separate Medicaid income standards.
+
+:::
+
+::: {.callout-note appearance="simple"}
+
+## End Stage Renal Disease (ESRD)
+
+Permanent kidney failure. To survive, the patient must either receive a kidney transplant or periodic kidney dialysis. Individuals with ESRD are eligible for Medicare benefits under a special entitlement.
+
+Individuals who have chronic kidney disease requiring renal dialysis or a kidney transplant are considered to have ESRD. To qualify for Medicare coverage, such individuals must be fully or currently insured under Social Security or the Railroad Retirement System or be the dependent of an insured person. Eligibility for Medicare coverage begins the first day of the fourth month of dialysis treatments; coverage may begin sooner if the patient participates in a self-care dialysis training program provided by a Medicare-approved training facility. Also, coverage may begin on admittance to a Medicare-approved hospital to receive a kidney transplant or to receive dialysis before the transplant if the transplant takes place in that same month or within the following 2 months.
+
+:::
+
+```{r mdcr_enroll_ab_6}
+mdcr_enroll_ab_6
+```
+
+<br>
+
+Part A and/or Part B Total, Aged, and Disabled Enrollees by Area of
+Residence, 2013-2021
+
+```{r mdcr_enroll_ab_7}
+mdcr_enroll_ab_7
+```
+
+<br>
+
+Part A and/or Part B Enrollees, by Type of Entitlement and Area of
+Residence, 2013-2021
+
+```{r mdcr_enroll_ab_8}
+mdcr_enroll_ab_8
+```
+
+<br>
+
+```{r mdcr_enroll_avgs}
+mdcr_enroll_avgs
+```
+
+<br>
+
+## Medicare Deaths
+
+Information on all Medicare beneficiary deaths, by type of entitlement, health care delivery, demographic characteristics, and geography.
+
+Total Beneficiaries by Month of Death, 2008-2021
+
+```{r mdcr_enroll_ab_33}
+mdcr_enroll_ab_33
+```
+
+<br>
+
+Total Beneficiaries by Demographics, 2013-2021
+
+```{r mdcr_enroll_ab_34}
+mdcr_enroll_ab_34
+```
+
+<br>
+
+Total Beneficiaries by Area of Residence, 2013-2021
+
+```{r mdcr_enroll_ab_35}
+mdcr_enroll_ab_35
+```
+
+<br>
+
+Original Medicare Beneficiaries by Month of Death, 2008-2021
+
+```{r mdcr_enroll_ab_36}
+mdcr_enroll_ab_36
+```
+
+<br>
+
+Original Medicare Beneficiaries by Area of Residence, 2013-2021
+
+```{r mdcr_enroll_ab_37}
+mdcr_enroll_ab_37
+```
+
+<br>
+
+Medicare Advantage and Other Health Plan Beneficiaries by Month of
+Death, 2008-2021
+
+```{r mdcr_enroll_ab_38}
+mdcr_enroll_ab_38
+```
+
+<br>
+
+Medicare Advantage and Other Health Plan Beneficiaries by Area of
+Residence, 2013-2021
+
+```{r mdcr_enroll_ab_39}
+mdcr_enroll_ab_39
+```
