--- a/analysis.qmd
+++ b/analysis.qmd
@@ -7,7 +7,7 @@ format:
     toc: true
     number-sections: false
 date: last-modified
-code-fold: false
+code-fold: true
 code-overflow: scroll
 ---
 
@@ -15,15 +15,35 @@ The CMS Program Statistics (CPS) includes high-level summary reports focused on 
 
 ## Medicare Enrollment
 
-The Medicare Enrollment reports contain trend, demographic, and state tables showing total Medicare enrollment, Original Medicare enrollment, Medicare Advantage and Other Health Plan enrollment, newly-enrolled beneficiaries, deaths, Medicare-Medicaid Enrollment, and Medicare Part D enrollment.
-
-Information on all Medicare enrollees by geography, type of coverage, type of entitlement, and demographic characteristics.
+The Medicare Enrollment reports contain trend, demographic, and state tables showing total Medicare enrollment, Original Medicare enrollment, Medicare Advantage and Other Health Plan enrollment, newly-enrolled beneficiaries, deaths, Medicare-Medicaid Enrollment, and Medicare Part D enrollment. These include data on all Medicare enrollees by geography, type of coverage, type of entitlement, and demographic characteristics.
 
 ```{r setup}
 #| echo: false
 #| eval: true
 source(here::here("R", "utils.R"))
 ```
+
+
+::: {.callout-note appearance="simple" collapse="true"}
+
+## Original Medicare Enrollees
+
+Medicare beneficiaries enrolled in the traditional health care system (or Fee-for-Service).
+
+:::
+
+
+::: {.callout-note appearance="simple" collapse="true"}
+
+## Medicare Advantage and Other Health Plan Enrollees
+
+Medicare beneficiaries enrolled in health plans that are offered by private companies approved by Medicare to provide health care coverage offered at a uniform premium and uniform level of cost-sharing to all Medicare beneficiaries residing in the service area (or segment of the service area). Each type of plan has special rules and exceptions.
+
+:::
+
+::: {.panel-tabset}
+
+## Yearly Enrollment
 
 ```{r mdcr_enroll_ab_1}
 mdcr_enroll_ab_1 |> 
@@ -39,7 +59,7 @@ mdcr_enroll_ab_1 |>
   gt::opt_stylize(style = 1)
 ```
 
-<br>
+## Absolute Change
 
 ```{r mdcr_enroll_ab_1_2}
 mdcr_enroll_ab_1 |> 
@@ -56,8 +76,7 @@ mdcr_enroll_ab_1 |>
   gt::opt_stylize(style = 1)
 ```
 
-
-<br>
+## Relative Change
 
 ```{r mdcr_enroll_ab_1_3}
 mdcr_enroll_ab_1 |> 
@@ -72,30 +91,14 @@ mdcr_enroll_ab_1 |>
   gt::opt_stylize(style = 1)
 ```
 
-::: {.callout-note appearance="simple"}
-
-## Original Medicare Enrollees
-
-Medicare beneficiaries enrolled in the traditional health care system (or Fee-for-Service).
-
 :::
-
-
-::: {.callout-note appearance="simple"}
-
-## Medicare Advantage and Other Health Plan Enrollees
-
-Medicare beneficiaries enrolled in health plans that are offered by private companies approved by Medicare to provide health care coverage offered at a uniform premium and uniform level of cost-sharing to all Medicare beneficiaries residing in the service area (or segment of the service area). Each type of plan has special rules and exceptions.
-
-:::
-
-
 
 ```{r}
 #| label: fig-origmapct
 #| fig-cap: "Breakdown of percentage of Medicare types from 2008 to 2021"
 #| warning: false
-#| code-fold: true
+#| echo: false
+#| eval: false
 
 mdcr_enroll_ab_1 |> 
   dplyr::select(Year = year, 
@@ -139,11 +142,10 @@ mdcr_enroll_ab_1 |>
   ggplot2::theme(legend.position = "top")
 ```
 
-<br>
-
 ```{r}
 #| warning: false
-#| code-fold: true
+#| echo: false
+#| eval: false
 mdcr_enroll_ab_1 |> 
   dplyr::select(year, 
                 original_pct, 
@@ -162,11 +164,10 @@ mdcr_enroll_ab_1 |>
   gtExtras::gt_theme_538()
 ```
 
-<br>
-
 ```{r}
 #| warning: false
-#| code-fold: true
+#| echo: false
+#| eval: false
 mdcr_enroll_ab_1 |> 
   dplyr::select(year, 
                 total_pct_chg,
@@ -215,16 +216,9 @@ mdcr_enroll_ab_1 |>
 
 <br>
 
-## Enrollment and Population by Area of Residence, 2013-2021
+## Enrollment by Area of Residence, 2013-2021
 
-```{r mdcr_enroll_ab_2}
-mdcr_enroll_ab_2 |> 
-  dplyr::glimpse()
-```
-
-
-
-::: {.callout-note appearance="simple"}
+::: {.callout-note appearance="simple" collapse="true"}
 
 ## Metropolitan Statistical Area
 
@@ -233,7 +227,7 @@ A Core Based Statistical Area associated with at least one urbanized area that h
 :::
 
 
-::: {.callout-note appearance="simple"}
+::: {.callout-note appearance="simple" collapse="true"}
 
 ## Micropolitan Statistical Area
 
@@ -242,7 +236,7 @@ A Core Statistical Area associated with at least one urban cluster that has a po
 :::
 
 
-::: {.callout-note appearance="simple"}
+::: {.callout-note appearance="simple" collapse="true"}
 
 ## Non-Core-Based Statistical Area
 
@@ -250,9 +244,194 @@ All remaining counties, often labeled “noncore” counties because they are no
 
 :::
 
+```{r mdcr_enroll_ab_2}
+mdcr_enroll_ab_2 |> 
+  dplyr::select(year,
+                residence = area_of_residence,
+                population,
+                total,
+                original,
+                ma_other,
+                metro,
+                micro,
+                non_cbsa) |> 
+  gt::gt(rowname_col = "year") |> 
+  gt::sub_missing() |> 
+  gt::fmt_number(columns = 3:9,
+                 suffixing = TRUE,
+                 decimals = 2) |>
+  gt::opt_stylize(style = 1)
+```
+
+<br>
 
 
 ```{r}
+mdcr_enroll_ab_2 |> 
+  dplyr::select(year,
+                residence = area_of_residence,
+                Total = total_pct,
+                Original = original_pct,
+                Advantage = ma_other_pct,
+                Metropolitan = metro_pct,
+                Micropolitan = micro_pct,
+                "Non-CBSA" = non_cbsa_pct) |> 
+  gt::gt(rowname_col = "year",
+         groupname_col = "residence") |> 
+  gt::sub_missing() |> 
+  gt::fmt_percent(columns = 3:8) |> 
+  gt::opt_stylize(style = 1)
+```
+
+<br>
+
+### Percentage of Population Enrolled in Medicare
+
+```{r}
+#| column: page
+mdcr_enroll_ab_2 |> 
+  dplyr::select(year,
+                residence = area_of_residence,
+                Total = total_pct) |> 
+  tidyr::pivot_wider(names_from = "year", 
+                     values_from = "Total") |> 
+  gt::gt(rowname_col = "residence") |> 
+  gt::tab_header(
+    title = gt::md("**Medicare Enrollment by Area of Residence**"),
+    subtitle = gt::md("**Percentage of Population Enrolled in Medicare, 2013 - 2021**")
+  ) |> 
+  gt::cols_align(align = "right", 
+                 columns = residence) |> 
+  gt::cols_align_decimal() |> 
+  gt::opt_table_font(
+    font = c(
+      gt::google_font(name = "Karla"),
+      gt::default_fonts())) |>
+  gt::sub_missing() |>
+  gt::fmt_percent(columns = 2:10,
+                  decimals = 1,
+                  drop_trailing_zeros = TRUE,
+                  drop_trailing_dec_mark = TRUE) |>
+  gt::data_color(direction = "row",
+                 method = "numeric",
+                 palette = "Blues",
+                 reverse = TRUE) |>
+  gt::tab_source_note(
+    source_note = gt::md(
+    "**Source**: [CMS Program Statistics - Medicare Total Enrollment](https://data.cms.gov/summary-statistics-on-beneficiary-enrollment/medicare-and-medicaid-reports/cms-program-statistics-medicare-total-enrollment).")) |> 
+  gt::opt_stylize(style = 1, add_row_striping = FALSE)
+```
+
+<br>
+
+### Percentage Enrolled in Original Medicare or Medicare Advantage
+
+```{r}
+#| column: page
+#| echo: false
+#| eval: false
+mdcr_enroll_ab_2 |> 
+  dplyr::select(year,
+                residence = area_of_residence,
+                ORIG = original_pct,
+                MA = ma_other_pct) |> 
+  tidyr::pivot_longer(cols = ORIG:MA, 
+                      names_to = "Type", 
+                      values_to = "Percentage") |> 
+  tidyr::unite("year_type", c(year, Type)) |> 
+  tidyr::pivot_wider(names_from = "year_type", 
+                     values_from = "Percentage") |> 
+  gt::gt(rowname_col = "residence") |> 
+  gt::tab_spanner_delim(delim = "_") |>
+  gt::cols_align(align = "right", 
+                 columns = residence) |> 
+  gt::cols_align_decimal() |> 
+  gt::opt_table_font(
+    font = c(
+      gt::google_font(name = "Karla"),
+      gt::default_fonts())) |>
+  gt::sub_missing() |>
+  gt::fmt_percent(columns = 2:19,
+                  decimals = 1,
+                  drop_trailing_zeros = TRUE,
+                  drop_trailing_dec_mark = TRUE) |>
+  gt::data_color(direction = "row",
+                 method = "numeric",
+                 palette = "Blues") |>
+  gt::opt_vertical_padding(scale = 1.65) |>
+  gt::opt_stylize(style = 1, add_row_striping = FALSE)
+```
+
+<br>
+
+```{r}
+#| column: page
+mdcr_enroll_ab_2 |> 
+  dplyr::select(year,
+                residence = area_of_residence,
+                Original = original_pct,
+                Advantage = ma_other_pct) |> 
+  tidyr::pivot_longer(cols = Original:Advantage, 
+                      names_to = "Type", 
+                      values_to = "Percentage") |> 
+  tidyr::pivot_wider(names_from = "year",
+                     values_from = "Percentage") |>
+  gt::gt(rowname_col = "Type", 
+         groupname_col = "residence") |> 
+  gt::tab_header(
+    title = gt::md("**Medicare Enrollment by Area of Residence**"),
+    subtitle = gt::md("**Percentage of Medicare Beneficiaries Enrolled in *Original Medicare* or *Medicare Advantage*, 2013 - 2021**")
+  ) |> 
+  gt::tab_options(
+    row_group.background.color = "#FFEFDB",
+    row_group.as_column = TRUE) |>
+  gt::tab_stub_indent(
+    rows = dplyr::everything(),
+    indent = 2) |> 
+  gt::cols_align(align = "right", 
+                 columns = c("residence", "Type")) |> 
+  gt::cols_align_decimal() |> 
+  gt::opt_table_font(
+    font = c(
+      gt::google_font(name = "Karla"),
+      gt::default_fonts())) |>
+  gt::sub_missing() |>
+  gt::fmt_percent(columns = 3:11,
+                  decimals = 1,
+                  drop_trailing_zeros = TRUE,
+                  drop_trailing_dec_mark = TRUE) |>
+  gt::data_color(direction = "row",
+                 method = "numeric",
+                 palette = "Blues") |>
+  gt::opt_vertical_padding(scale = 1.65) |>
+  gt::opt_stylize(style = 1, 
+                  add_row_striping = FALSE) |>
+  gt::tab_source_note(
+    source_note = gt::md(
+    "**Source**: [CMS Program Statistics - Medicare Total Enrollment](https://data.cms.gov/summary-statistics-on-beneficiary-enrollment/medicare-and-medicaid-reports/cms-program-statistics-medicare-total-enrollment)."))
+```
+
+<br>
+
+```{r}
+mdcr_enroll_ab_2 |> 
+  dplyr::select(year,
+                residence = area_of_residence,
+                METRO = metro_pct,
+                MICRO = micro_pct,
+                "NON-CBSA" = non_cbsa_pct) |> 
+  gt::gt(rowname_col = "year",
+         groupname_col = "residence") |> 
+  gt::sub_missing() |> 
+  gt::fmt_percent(columns = 3:5) |> 
+  gt::opt_stylize(style = 1)
+```
+
+<br>
+
+```{r}
+#| echo: false
+#| eval: false
 mdcr_enroll_ab_2 |> 
   dplyr::select(year, 
                 area_of_residence, 
@@ -267,35 +446,35 @@ mdcr_enroll_ab_2 |>
     font = c(
       gt::google_font(name = "Karla"),
       gt::default_fonts())) |>
-  gt::tab_style(
-    style = gt::cell_text(
-      font = c(
-        gt::google_font(name = "IBM Plex Mono"),
-        gt::default_fonts())),
-    locations = gt::cells_body(columns = 2:10)) |> 
+  # gt::tab_style(
+  #   style = gt::cell_text(
+  #     font = c(
+  #       gt::google_font(name = "IBM Plex Mono"),
+  #       gt::default_fonts())),
+  #   locations = gt::cells_body(columns = 2:10)) |> 
   # gt::tab_style(style = gt::cell_text(weight = "bold"),
   #               locations = gt::cells_stub()) |>
-  gt::fmt_percent(rows = 1,
-                  decimals = 1,
-                  drop_trailing_zeros = TRUE,
-                  drop_trailing_dec_mark = TRUE) |> 
-  gt::fmt_number(rows = 2:52,
-                 decimals = 1,
-                 scale_by = 100,
-                 drop_trailing_zeros = TRUE) |> 
-  gt::data_color(direction = "row",
-                 method = "numeric",
-                 palette = "PuOr",
-                 #alpha = 0.4,
-                 reverse = TRUE
-                 ) |> 
-  gt::opt_vertical_padding(scale = 0.65) |>
-  gt::opt_horizontal_padding(scale = 1.3) |>
-  gt::tab_options(
-    table_body.hlines.style = "none",
-    column_labels.border.top.color = "black",
-    column_labels.border.bottom.color = "black",
-    table_body.border.bottom.color = "black")
+  # gt::fmt_percent(rows = 1,
+  #                 decimals = 1,
+  #                 drop_trailing_zeros = TRUE,
+  #                 drop_trailing_dec_mark = TRUE) |> 
+  # gt::fmt_number(rows = 2:52,
+  #                decimals = 1,
+  #                scale_by = 100,
+  #                drop_trailing_zeros = TRUE) |> 
+  # gt::data_color(direction = "row",
+  #                method = "numeric",
+  #                palette = "PuOr",
+  #                #alpha = 0.4,
+  #                reverse = TRUE
+  #                ) |> 
+  # gt::opt_vertical_padding(scale = 0.65) |>
+  # gt::opt_horizontal_padding(scale = 1.3) |>
+  # gt::tab_options(
+  #   table_body.hlines.style = "none",
+  #   column_labels.border.top.color = "black",
+  #   column_labels.border.bottom.color = "black",
+  #   table_body.border.bottom.color = "black")
 ```
 
 <br>
